# TodoList-CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  conanfile.py  vcpkg.json
.github/workflows/: build.yml
debug/: logs.txt
include/: ColorManager.hpp  Database.h  Task.h  TaskManager.h
src/: Database.cpp  Task.cpp  TaskManager.cpp  main.cpp
tests/: Benchmark.cpp  CMakeLists.txt  conanfile.py
